[project]
name = "abc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "abc-xml-converter>=1.0.1",
    "argparse>=1.4.0",
    "pdf2image>=1.17.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "trl>=0.24.0",
    "unsloth>=2026.2.1",
]
